--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,22 +1,27 @@
-name: Tests
+name: Deploy receiver app 
 
-on:
-  push:
-    branches:
-      - main
+on: 
+  push: 
+    branches: 
+      - main 
 
-jobs:
-  run-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          build: npm run build
-          start: npm start
-      - name: Jest run
-        run: npm test
+jobs: 
+  build: 
+    runs-on: ubuntu-latest 
+    steps: 
+      - name: Check out code 
+        uses: actions/checkout@v2 
+      - name: Set up python 
+        uses: actions/setup-python@v2 
+        with: 
+          python-version: 3.8 
+      - name: Install dependencies
+        run: |
+          cd receiver 
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi 
+      - name: Test python 
+        run: |
+          cd receiver 
+          pip install pytest 
+          pytest  
